[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ui_window.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/end_of_content_screen/EndOfContentScreen.gd" type="Script" id=3]
[ext_resource path="res://ui/TickButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menu/menu_click2.wav" type="AudioStream" id=5]

[node name="EndOfContentScreen" type="Control"]
margin_right = 480.0
margin_bottom = 270.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -54.5
margin_right = 104.0
margin_bottom = 54.5

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -40.0
margin_right = 90.0
margin_bottom = 21.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[fill]You have seen all the content of the game. If you have questions, pieces of advice or ideas, consider posting a comment on the [color=yellow][url=https://ivanvoirol.itch.io/hadonaut]itch.io page of the game[/url][/color]![/fill]"
meta_underlined = false
text = "You have seen all the content of the game. If you have questions, pieces of advice or ideas, consider posting a comment on the itch.io page of the game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateMessageButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = 14.5
margin_right = 13.0
margin_bottom = 37.5

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 170 )
stream = ExtResource( 5 )
bus = "FxMeta"
[connection signal="meta_clicked" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_hover_ended" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_hover_ended"]
[connection signal="meta_hover_started" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_hover_started"]
[connection signal="mouse_entered" from="UpdateMessageButton" to="." method="_on_UpdateMessageButton_mouse_entered"]
[connection signal="mouse_exited" from="UpdateMessageButton" to="." method="_on_UpdateMessageButton_mouse_exited"]
[connection signal="pressed" from="UpdateMessageButton" to="." method="_on_UpdateMessageButton_pressed"]
